[TASK] htaccess: create if any of the sendCacheHeader settings are true
It may be desired to use the redirect after cache timeout feature
without sending expire headers.

--- a/Resources/Private/Templates/Htaccess.html
+++ b/Resources/Private/Templates/Htaccess.html
@@ -1,8 +1,9 @@
+<f:if condition="{sendCacheControlHeader}">
 <IfModule mod_expires.c>
 	ExpiresActive on
 	ExpiresByType text/html {mode}{lifetime}
 </IfModule>
-
+</f:if>
 <f:if condition="{sendCacheControlHeaderRedirectAfterCacheTimeout}">
 <IfModule mod_rewrite.c>
 	RewriteEngine On
