--- a/Resources/Private/Templates/Htaccess.html
+++ b/Resources/Private/Templates/Htaccess.html
@@ -7,6 +7,14 @@
 <f:if condition="{sendCacheControlHeaderRedirectAfterCacheTimeout}">
 <IfModule mod_rewrite.c>
 	RewriteEngine On
+
+	<f:comment>
+		Explicitly prevent direct access here. This is needed because the .htaccess
+		access check in the root dir is overwritten by the RewriteRules defined here.
+	</f:comment>
+	RewriteCond %{ENV:REDIRECT_STATUS} ^$
+	RewriteRule .* - [F,L]
+
 	RewriteCond %<![CDATA[{TIME}]]> ><f:format.date format="YmdHis">@{expires}</f:format.date>
 	RewriteRule ^.*$ /index.php
 </IfModule>
