--- a/Resources/Private/Templates/Module.html
+++ b/Resources/Private/Templates/Module.html
@@ -1,9 +1,13 @@
 <h1>Static file cache</h1>
-<input type="submit" onclick="return confirm('Are you sure?');" value="Remove all expired pages" name="ACTION[removeExpiredPages]">
-<p class="c-refresh">
-	<a href="{requestUri}">
+<p>
+	<button type="submit" class="btn btn-default" onclick="return confirm('Are you sure?');" value="" name="ACTION[removeExpiredPages]">
+		<f:be.buttons.icon icon="actions-edit-delete" />
+		Remove all expired pages
+	</button>
+	<a href="{requestUri}" class="btn btn-default">
 		<f:be.buttons.icon icon="actions-system-refresh" title="{f:translate(key: 'LLL:EXT:lang/locallang_core.xml:labels.refresh')}" />
-		{f:translate(key: 'LLL:EXT:lang/locallang_core.xml:labels.refresh')} </a>
+		{f:translate(key: 'LLL:EXT:lang/locallang_core.xml:labels.refresh')}
+	</a>
 </p>
 <table border="0" cellspacing="1" cellpadding="0" class="t3-table">
 	<thead>
@@ -21,6 +25,7 @@
 				<f:if condition="{cell.info}">
 					<f:then>
 						<td nowrap="nowrap">
+							<f:format.raw>{cell.depthData}</f:format.raw>
 							<f:format.raw>{cell.title}</f:format.raw>
 						</td>
 						<td>{cell.identifier}</td>
@@ -61,6 +66,7 @@
 					</f:then>
 					<f:else>
 						<td nowrap="nowrap" colspan="4">
+							<f:format.raw>{cell.depthData}</f:format.raw>
 							<f:format.raw>{cell.title}</f:format.raw>
 						</td>
 						<td>
